Ajustes finais do Quiz Cinema.

--- a/quizCinema/quizCinema.csproj
+++ b/quizCinema/quizCinema.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="TelaFinal.resx">
       <DependentUpon>TelaFinal.cs</DependentUpon>
@@ -132,6 +133,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema2.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema-stallone.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema-sandra_bullock.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema7.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema6.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cinema4.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
